maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:2: error: not found: value keepHandOnTheSideWall
	keepHandOnTheSideWall()
        ^